Wrote EUSART setup using 4MHZ internal oscillator to generate 9600 baudrate

--- a/pic16-serial.X/nbproject/Makefile-genesis.properties
+++ b/pic16-serial.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue Sep 06 16:49:48 CEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.30\\mpasmx
-configurations-xml=766ef9ffce58f6a30e6be9b4d6eb157d
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7f49b92def2282a10cc2575a9b0916c7
-default.languagetoolchain.version=5.67
-host.platform=windows
+#Tue Sep 13 23:00:18 CEST 2016
+default.languagetoolchain.dir=/Applications/microchip/mplabx/v3.40/mpasmx
+configurations-xml=f5e83301a8d2553d0510f6acbb38d5a4
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=02b44c60b7ea0aab28d65f169487b894
+default.languagetoolchain.version=5.68
+host.platform=mac
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=6ab410b1b3976554a06fa5c112d0bfad
+default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=9870a87b07b569101473e75cd910041f
