--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # NetBeans private config
-pic16-serial.X/nbproject/private/
+.\pic16-serial.X\nbproject\private\
 pic16-serial.X/nbproject/private/*
 
 
