--- a/pic16-serial.X/nbproject/Makefile-genesis.properties
+++ b/pic16-serial.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue Sep 13 23:00:18 CEST 2016
-default.languagetoolchain.dir=/Applications/microchip/mplabx/v3.40/mpasmx
-configurations-xml=f5e83301a8d2553d0510f6acbb38d5a4
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=02b44c60b7ea0aab28d65f169487b894
+#Tue Oct 04 17:43:43 CEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.35\\mpasmx
+configurations-xml=611356d40e17ab5ad60c4edf870d1bd6
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f4f319408af34d2528a0ee2df2d21b1a
 default.languagetoolchain.version=5.68
-host.platform=mac
+host.platform=windows
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=9870a87b07b569101473e75cd910041f
+default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=88d8a0f85a9478ecc1537cbb25898862
