--- a/pic16-serial.X/nbproject/Makefile-genesis.properties
+++ b/pic16-serial.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Tue Oct 04 17:43:43 CEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.35\\mpasmx
-configurations-xml=611356d40e17ab5ad60c4edf870d1bd6
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f4f319408af34d2528a0ee2df2d21b1a
+#Thu Dec 15 10:04:45 CET 2016
+default.languagetoolchain.dir=/home/matteo/Programmi/mplab/mpasmx
+configurations-xml=c091a83936b99ad4384624b480a98bc8
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=02b44c60b7ea0aab28d65f169487b894
 default.languagetoolchain.version=5.68
-host.platform=windows
+host.platform=linux
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=88d8a0f85a9478ecc1537cbb25898862
+default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=9870a87b07b569101473e75cd910041f
